--- a/css/styles.css
+++ b/css/styles.css
@@ -86,7 +86,7 @@ input[type=text],
 input[type=email],
 input[type=password] {
     width: 100%;
-   min-height:30px;
+   height:30px;
     margin-bottom:10px;
 }
 
@@ -256,16 +256,60 @@ textarea {
    
     line-height: 1.5em;
 }
-    .btn {     
-        top: -30px;     
-        margin-left: 70px;
-    }
-    .button {
-        display: inline-flex;
-        height: 40px;
+     .btn {     
+        position: relative;
+        height: 45px;
         width: 150px;
+        text-transform: uppercase;
+        text-decoration: none;
+        font-size: .8em;
+        letter-spacing: 1.5px;
+        cursor: pointer;
+    }
+    
+
+    .button-3 {
+        width: 150px;
+        position: relative;
+        overflow: hidden;
+        cursor: pointer;
+      }
+      
+      .button-3 button{
+       
+        transition: all .45s ease-Out;
+      }
+      
+      .circle {
+        width: 0%;
+        height: 0%;
+        opacity: 0;
+        line-height: 40px;
+        border-radius: 50%;
+        background: #BFC0C0;
+        position: absolute;
+        transition: all .5s ease-Out;
+        top: 20px;
+        left: 70px;
+      }
+      
+      .button-3:hover .circle {
+        width: 200%;
+        height: 500%;
+        opacity: 1;
+        top: -70px;
+        left: -70px;
+      }
+      
+      .button-3:hover button {
+        color: #2D3142;
+      }
+      
+      
+       .button {
+        display: inline-flex;
         border: 2px solid Moccasin;
-        margin: 20px 20px 20px 20px;
+        
         color: #7e8080;
         text-transform: uppercase;
         text-decoration: none;
@@ -274,8 +318,70 @@ textarea {
         align-items: center;
         justify-content: center;
         overflow: hidden;
+        height: 45px;
+        width: 150px;
+        
+      }
+       .button-box {
+         height:100px;
+        margin-left: 75px;
       }
 
+
+      #previous-btn {
+        
+      }
+      .next-btn {
+       left: 200px;
+       top: -45px;
+      }
+    /*
+      
+
+.button-3 button {
+        position: relative;
+        transition: all .45s ease-Out;
+      }
+
+
+       .circle {
+        width: 0%;
+        height: 0%;
+        opacity: 0;
+        line-height: 40px;
+        border-radius: 50%;
+        background: #BFC0C0;
+        position: absolute;
+        transition: all .5s ease-Out;
+        top: -20px;
+        left: -70px;
+        overflow: hidden;
+      }
+
+       .button-3:hover .circle {
+        overflow: hidden;
+        width: 200%;
+        height: 500%;
+        opacity: 0.5;
+        top: -50px;
+        left: -40px;
+      }
+      
+
+      .button-3:hover button {
+        color: #2D3142;
+      }
+      .button-3 {
+        
+        
+         overflow: hidden;
+         height: auto;
+         width: auto;
+         
+       } */
+     
+     
+      
 
     div.cycle-slideshow {
         height: 700px;
