--- a/css/styles.css
+++ b/css/styles.css
@@ -212,10 +212,21 @@ footer li a {
             margin-bottom: 20px;
             width: 300px;
         }
-        #commentForm label.error, #commentForm input.submit {
+        #commentForm label.error {
             margin-left: 20px;
             
         
+        }
+
+        #commentForm input, textarea {
+           border: 1px solid rgb(251, 199, 121); 
+        }
+
+        .subp {
+            height: 100px;
+            width: 500px;
+            margin-top: 50px;
+            margin-left: 20px;
         }
         
     legend {
@@ -327,14 +338,11 @@ textarea {
         margin-left: 75px;
       }
 
-
-      #previous-btn {
-        
-      }
       .next-btn {
        left: 200px;
        top: -45px;
       }
+      
     /*
       
 
