--- a/css/styles.css
+++ b/css/styles.css
@@ -12,7 +12,7 @@ body {
 }
 header {
     background:rgb(243, 204, 204);
-    height: 150px;
+    height: auto;
     margin-bottom: 20px;
     overflow: hidden;
     padding: 20px 0;
@@ -53,7 +53,7 @@ div a {
 
 nav li {
     float: left;
-    margin-left: 25px;
+    margin: 15px;
     list-style-type: none;
 
 }
