--- a/css/styles.css
+++ b/css/styles.css
@@ -426,3 +426,17 @@ textarea {
         text-shadow: -1px -1px 1px #000, 1px 1px 1px rgb(70, 69, 69);
          color:Moccasin;
      }
+     .slicknav_menu {
+        display:none;
+    }
+    
+    @media screen and (max-width: 40em) {
+        /* #menu is the original menu */
+        .js #menu {
+            display:none;
+        }
+        
+        .js .slicknav_menu {
+            display:block;
+        }
+    }
